--- a/index3.html
+++ b/index3.html
@@ -16,14 +16,15 @@
                     </form>
                 </li>
             </ul>
-        <a href="home">home</a>    
-        <a href="about">about</a>
-        <a href="work">work</a>
-        <a href="resume">resume</a>
-        <a href="contact">contact</a>
+        <a href="#home">home</a>    
+        <a href="#about">about</a>
+        <a href="#work">work</a>
+        <a href="#resume">resume</a>
+        <a href="#contact">contact</a>
     </nav>
+    <hr>
         <h1>hello world</h1>
-
+    <hr>
         </section>
         <section id="home"c> <!--home section-->
             <h1>home</h1>
@@ -33,6 +34,8 @@
             <h1>about</h1>
             <p>elyess bougamra 11/17/2001</p>
         </section id="work"> <!--work section-->
+            <h1>work</h1>
+            <p>my project</p>
         <section>
             <section id="resume"> <!--resume section-->
             <h1>resume</h1>
@@ -55,6 +58,7 @@
             <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
             check the video
         </video>
+        <hr>
         </section>
         <form>
             <label>Name:</label>
@@ -81,6 +85,7 @@
             <option value="GameTrack">Game Track</option>
             <option value="DataScienceTrack">Data Science Track</option>
           </select>
+          <hr>
           <footer>
             <p>Author: Hege Refsnes</p>
             <p><a href="bougamraelyess@gmail.com">bougamraelyes@gmail.com</a></p>
