--- a/index3.html
+++ b/index3.html
@@ -5,46 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my beautiful page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header>
+    <div id="logo">
+        <h1>my navbar</h1>
+    </div>
     <section> <!--navbare section-->
         <nav>
             <ul>
                 <li>
-                    <form>
-                        Search <input type = "text" name = "search" />
-                    </form>
+                    <a href="#home">home</a>   
                 </li>
             </ul>
-        <a href="#home">home</a>    
-        <a href="#about">about</a>
-        <a href="#work">work</a>
-        <a href="#resume">resume</a>
-        <a href="#contact">contact</a>
-    </nav>
-    <hr>
+            <ul>
+                <li>
+                    <a href="#about">about</a>    
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#work">work</a>
+                </li>
+            </ul>   
+            <ul>
+                <li>
+                    <a href="#resume">resume</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#contact">contact</a>
+                </li>
+            </ul>
+        </nav>
+   </section>
+   </header>
+   <br/>
         <h1>hello world</h1>
     <hr>
         </section>
-        <section id="home"c> <!--home section-->
+        <br/>
+        <section id="home"> <!--home section-->
             <h1>home</h1>
             <p>welcom guys</p>
         </section>
+        <br/>
         <section id="about"> <!--about section-->
             <h1>about</h1>
             <p>elyess bougamra 11/17/2001</p>
-        </section id="work"> <!--work section-->
+            </section>
+        <section id="work"> <!--work section-->
             <h1>work</h1>
             <p>my project</p>
-        <section>
+        </section>
+            <br/>
             <section id="resume"> <!--resume section-->
             <h1>resume</h1>
             <p>heheheheh</p>
             </section>
+            <br/>
         <section id="contact"> <!--contact section-->
             <h1>contact</h1>
             <p>my number: 26002078</p>
         </section>
+        <br/>
         </section>
     <hr>
         <section>
@@ -58,6 +84,7 @@
             <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
             check the video
         </video>
+        <br/>
         <hr>
         </section>
         <form>
@@ -85,6 +112,7 @@
             <option value="GameTrack">Game Track</option>
             <option value="DataScienceTrack">Data Science Track</option>
           </select>
+          <br/>
           <hr>
           <footer>
             <p>Author: Hege Refsnes</p>
